--- a/styles.css/style.css
+++ b/styles.css/style.css
@@ -1,5 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Manrope:wght@200..800&display=swap');
-
+@import "tailwindcss";
 .manrop-font {
   font-family: "Manrope", sans-serif;
 }
